# wol-command-center

./: .gitignore  README.md  format  machines.json.example  main.py  pyproject.toml
templates/: dashboard.html
